@@ -16,6 +16,8 @@ import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.mockito.MockitoAnnotations.openMocks;
+import static org.springframework.test.util.ReflectionTestUtils.setField;
+import static uk.gov.hmcts.reform.sscs.ccd.domain.Benefit.CHILD_SUPPORT;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.Benefit.PIP;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.Benefit.getLongBenefitNameDescriptionWithOptionalAcronym;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.HearingRoute.LIST_ASSIST;
@@ -44,6 +46,8 @@ import static uk.gov.hmcts.reform.sscs.tyanotifications.config.AppConstants.IBCA
 import static uk.gov.hmcts.reform.sscs.tyanotifications.config.AppConstants.IBCA_FULL_NAME_WELSH;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.config.AppConstants.JOINT_TEXT_WITH_A_SPACE;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.config.AppConstants.JOINT_TEXT_WITH_A_SPACE_WELSH;
+import static uk.gov.hmcts.reform.sscs.tyanotifications.config.AppConstants.MAX_DWP_RESPONSE_DAYS;
+import static uk.gov.hmcts.reform.sscs.tyanotifications.config.AppConstants.MAX_DWP_RESPONSE_DAYS_CHILD_SUPPORT;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.config.AppConstants.RESPONSE_DATE_FORMAT;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.config.AppConstants.THE_STRING;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.config.AppConstants.THE_STRING_WELSH;
@@ -83,6 +87,7 @@ import static uk.gov.hmcts.reform.sscs.tyanotifications.config.PersonalisationMa
 import static uk.gov.hmcts.reform.sscs.tyanotifications.config.PersonalisationMappingConstants.FIRST_TIER_AGENCY_FULL_NAME_WELSH;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.config.PersonalisationMappingConstants.FIRST_TIER_AGENCY_GROUP;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.config.PersonalisationMappingConstants.FIRST_TIER_AGENCY_GROUP_WELSH;
+import static uk.gov.hmcts.reform.sscs.tyanotifications.config.PersonalisationMappingConstants.FORM_TYPE;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.config.PersonalisationMappingConstants.HEARING;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.config.PersonalisationMappingConstants.HEARING_ARRANGEMENT_DETAILS_LITERAL;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.config.PersonalisationMappingConstants.HEARING_ARRANGEMENT_DETAILS_LITERAL_WELSH;
@@ -98,6 +103,8 @@ import static uk.gov.hmcts.reform.sscs.tyanotifications.config.PersonalisationMa
 import static uk.gov.hmcts.reform.sscs.tyanotifications.config.PersonalisationMappingConstants.MANAGE_EMAILS_LINK_LITERAL;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.config.PersonalisationMappingConstants.NAME;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.config.PersonalisationMappingConstants.OTHER_PARTY_NAME;
+import static uk.gov.hmcts.reform.sscs.tyanotifications.config.PersonalisationMappingConstants.OTHER_PARTY_NAMES;
+import static uk.gov.hmcts.reform.sscs.tyanotifications.config.PersonalisationMappingConstants.OTHER_PARTY_SIZE;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.config.PersonalisationMappingConstants.PANEL_COMPOSITION;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.config.PersonalisationMappingConstants.PANEL_COMPOSITION_WELSH;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.config.PersonalisationMappingConstants.PARTY_TYPE;
@@ -124,6 +131,7 @@ import static uk.gov.hmcts.reform.sscs.tyanotifications.config.SubscriptionType.
 import static uk.gov.hmcts.reform.sscs.tyanotifications.config.SubscriptionType.REPRESENTATIVE;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.domain.notify.NotificationEventType.ACTION_POSTPONEMENT_REQUEST;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.domain.notify.NotificationEventType.ACTION_POSTPONEMENT_REQUEST_WELSH;
+import static uk.gov.hmcts.reform.sscs.tyanotifications.domain.notify.NotificationEventType.ADD_OTHER_PARTY_DATA;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.domain.notify.NotificationEventType.ADJOURNED;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.domain.notify.NotificationEventType.ADMIN_APPEAL_WITHDRAWN;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.domain.notify.NotificationEventType.APPEAL_DORMANT;
@@ -149,6 +157,9 @@ import static uk.gov.hmcts.reform.sscs.tyanotifications.domain.notify.Notificati
 import static uk.gov.hmcts.reform.sscs.tyanotifications.domain.notify.NotificationEventType.JUDGE_DECISION_APPEAL_TO_PROCEED;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.domain.notify.NotificationEventType.LIBERTY_TO_APPLY_GRANTED;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.domain.notify.NotificationEventType.LIBERTY_TO_APPLY_REFUSED;
+import static uk.gov.hmcts.reform.sscs.tyanotifications.domain.notify.NotificationEventType.NOTIFY_APPELLANT_VALID_APPEAL;
+import static uk.gov.hmcts.reform.sscs.tyanotifications.domain.notify.NotificationEventType.NOTIFY_APPELLANT_VALID_APPEAL_WELSH;
+import static uk.gov.hmcts.reform.sscs.tyanotifications.domain.notify.NotificationEventType.OTHER_PARTY_ADDED_TO_APPEAL;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.domain.notify.NotificationEventType.PERMISSION_TO_APPEAL_GRANTED;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.domain.notify.NotificationEventType.PERMISSION_TO_APPEAL_REFUSED;
 import static uk.gov.hmcts.reform.sscs.tyanotifications.domain.notify.NotificationEventType.POSTPONEMENT;
@@ -170,19 +181,72 @@ import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.ChronoUnit;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
-import org.springframework.test.util.ReflectionTestUtils;
 import uk.gov.hmcts.reform.sscs.ccd.callback.DocumentType;
-import uk.gov.hmcts.reform.sscs.ccd.domain.*;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Address;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Appeal;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Appellant;
+import uk.gov.hmcts.reform.sscs.ccd.domain.AppellantInfo;
+import uk.gov.hmcts.reform.sscs.ccd.domain.AppellantInfoRequest;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Appointee;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Benefit;
+import uk.gov.hmcts.reform.sscs.ccd.domain.BenefitType;
+import uk.gov.hmcts.reform.sscs.ccd.domain.CcdValue;
+import uk.gov.hmcts.reform.sscs.ccd.domain.DatedRequestOutcome;
+import uk.gov.hmcts.reform.sscs.ccd.domain.DirectionType;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Document;
+import uk.gov.hmcts.reform.sscs.ccd.domain.DocumentDetails;
+import uk.gov.hmcts.reform.sscs.ccd.domain.DwpState;
+import uk.gov.hmcts.reform.sscs.ccd.domain.DynamicList;
+import uk.gov.hmcts.reform.sscs.ccd.domain.DynamicListItem;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Event;
+import uk.gov.hmcts.reform.sscs.ccd.domain.EventDetails;
+import uk.gov.hmcts.reform.sscs.ccd.domain.EventType;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Evidence;
+import uk.gov.hmcts.reform.sscs.ccd.domain.FormType;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Hearing;
+import uk.gov.hmcts.reform.sscs.ccd.domain.HearingDetails;
+import uk.gov.hmcts.reform.sscs.ccd.domain.HearingOptions;
+import uk.gov.hmcts.reform.sscs.ccd.domain.HearingStatus;
+import uk.gov.hmcts.reform.sscs.ccd.domain.HearingType;
+import uk.gov.hmcts.reform.sscs.ccd.domain.HmcHearingType;
+import uk.gov.hmcts.reform.sscs.ccd.domain.InfoRequests;
+import uk.gov.hmcts.reform.sscs.ccd.domain.JointParty;
+import uk.gov.hmcts.reform.sscs.ccd.domain.LanguagePreference;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Name;
+import uk.gov.hmcts.reform.sscs.ccd.domain.OtherParty;
+import uk.gov.hmcts.reform.sscs.ccd.domain.OverrideFields;
+import uk.gov.hmcts.reform.sscs.ccd.domain.RegionalProcessingCenter;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Representative;
+import uk.gov.hmcts.reform.sscs.ccd.domain.RequestOutcome;
+import uk.gov.hmcts.reform.sscs.ccd.domain.SchedulingAndListingFields;
+import uk.gov.hmcts.reform.sscs.ccd.domain.SscsCaseData;
+import uk.gov.hmcts.reform.sscs.ccd.domain.SscsDocument;
+import uk.gov.hmcts.reform.sscs.ccd.domain.SscsDocumentDetails;
+import uk.gov.hmcts.reform.sscs.ccd.domain.SscsFinalDecisionCaseData;
+import uk.gov.hmcts.reform.sscs.ccd.domain.State;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Subscription;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Subscriptions;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Venue;
 import uk.gov.hmcts.reform.sscs.reference.data.model.HearingChannel;
 import uk.gov.hmcts.reform.sscs.service.RegionalProcessingCenterService;
 import uk.gov.hmcts.reform.sscs.service.conversion.LocalDateToWelshStringConverter;
@@ -201,7 +265,7 @@ import uk.gov.hmcts.reform.sscs.tyanotifications.factory.NotificationWrapper;
 import uk.gov.hmcts.reform.sscs.tyanotifications.service.MessageAuthenticationServiceImpl;
 
 @Slf4j
-public class PersonalisationTest {
+class PersonalisationTest {
 
     private static final String CASE_ID = "54321";
     private static final String ADDRESS1 = "HM Courts & Tribunals Service";
@@ -211,55 +275,50 @@ public class PersonalisationTest {
     private static final String CITY = "LIVERPOOL";
     private static final String POSTCODE = "L2 5UZ";
     private static final String PHONE = "0300 999 8888";
-    private static final String PHONE_WELSH = "0300 999 9999";
+    private static final String PHONE_WELSH = "0300 303 5170";
+    private static final String PHONE_IBC = "0300 131 2850";
     private static final String DATE = "2018-07-01T14:01:18.243";
-
-    @Mock
-    private NotificationConfig config;
-
-    @Mock
-    private HearingContactDateExtractor hearingContactDateExtractor;
-
-    @Mock
-    private MessageAuthenticationServiceImpl macService;
-
-    @Mock
-    private RegionalProcessingCenterService regionalProcessingCenterService;
-
-    @Mock
-    private NotificationDateConverterUtil notificationDateConverterUtil;
-
-    @Mock
-    private EvidenceProperties evidenceProperties;
-
-    @InjectMocks
-    public Personalisation<NotificationWrapper> personalisation;
-
-    @Spy
-    private PersonalisationConfiguration personalisationConfiguration;
-
-    protected Subscriptions subscriptions;
-
-    protected Name name;
-
-    private RegionalProcessingCenter rpc;
     private static final DateTimeFormatter dateTimeFormatter = DateTimeFormatter.ofPattern("d MMMM yyyy");
-
     private final String evidenceAddressLine1 = "line1";
     private final String evidenceAddressLine2 = "line2";
     private final String evidenceAddressLine3 = "line3";
     private final String evidenceAddressScottishLine3 = "scottishLine3";
+    private final String evidenceIbcAddressLine1 = "ibcLine1";
+    private final String evidenceIbcAddressLine2 = "ibcLine2";
+    private final String evidenceIbcAddressLine3 = "ibcLine3";
+    private final String evidenceIbcAddressPostcode = "ibcPostcode";
     private final String evidenceAddressTown = "town";
     private final String evidenceAddressCounty = "county";
     private final String evidenceAddressPostcode = "postcode";
     private final String evidenceAddressScottishPostcode = "scottishPostcode";
     private final String evidenceAddressTelephone = "telephone";
     private final String evidenceAddressTelephoneWelsh = PHONE_WELSH;
+    private final String evidenceAddressTelephoneIbc = PHONE_IBC;
     private final EvidenceProperties.EvidenceAddress evidenceAddress = new EvidenceProperties.EvidenceAddress();
+    protected Subscriptions subscriptions;
+    protected Name name;
+    @Mock
+    private NotificationConfig config;
+    @Mock
+    private HearingContactDateExtractor hearingContactDateExtractor;
+    @Mock
+    private MessageAuthenticationServiceImpl macService;
+    @Mock
+    private RegionalProcessingCenterService regionalProcessingCenterService;
+    @Mock
+    private NotificationDateConverterUtil notificationDateConverterUtil;
+    @Mock
+    private EvidenceProperties evidenceProperties;
+    @InjectMocks
+    private Personalisation<NotificationWrapper> personalisation;
+    @Spy
+    private PersonalisationConfiguration personalisationConfiguration;
+    private RegionalProcessingCenter rpc;
+    private AutoCloseable autoCloseable;
 
     @BeforeEach
-    public void setup() {
-        openMocks(this);
+    void setup() {
+        autoCloseable = openMocks(this);
         when(config.getTrackAppealLink()).thenReturn(Link.builder().linkUrl("http://tyalink.com/appeal_id").build());
         when(config.getMyaLink()).thenReturn(Link.builder().linkUrl("http://myalink.com/appeal_id").build());
         when(config.getMyaClaimingExpensesLink()).thenReturn(Link.builder().linkUrl("http://myalink.com/claimingExpenses").build());
@@ -273,6 +332,7 @@ public class PersonalisationTest {
         when(config.getOnlineHearingLink()).thenReturn("http://link.com");
         when(config.getHelplineTelephone()).thenReturn("0300 123 1142");
         when(config.getHelplineTelephoneScotland()).thenReturn("0300 790 6234");
+        when(config.getHelplineTelephoneIbc()).thenReturn("0300 131 2850");
         when(notificationDateConverterUtil.toEmailDate(LocalDate.now().plusDays(1))).thenReturn("1 January 2018");
         when(notificationDateConverterUtil.toEmailDate(LocalDate.now().plusDays(7))).thenReturn("1 February 2018");
         when(notificationDateConverterUtil.toEmailDate(LocalDate.now().plusDays(56))).thenReturn("1 February 2019");
@@ -299,12 +359,17 @@ public class PersonalisationTest {
         evidenceAddress.setLine2(evidenceAddressLine2);
         evidenceAddress.setLine3(evidenceAddressLine3);
         evidenceAddress.setScottishLine3(evidenceAddressScottishLine3);
+        evidenceAddress.setIbcAddressLine1(evidenceIbcAddressLine1);
+        evidenceAddress.setIbcAddressLine2(evidenceIbcAddressLine2);
+        evidenceAddress.setIbcAddressLine3(evidenceIbcAddressLine3);
+        evidenceAddress.setIbcAddressPostcode(evidenceIbcAddressPostcode);
         evidenceAddress.setTown(evidenceAddressTown);
         evidenceAddress.setCounty(evidenceAddressCounty);
         evidenceAddress.setPostcode(evidenceAddressPostcode);
         evidenceAddress.setScottishPostcode(evidenceAddressScottishPostcode);
         evidenceAddress.setTelephone(evidenceAddressTelephone);
         evidenceAddress.setTelephoneWelsh(evidenceAddressTelephoneWelsh);
+        evidenceAddress.setTelephoneIbc(evidenceAddressTelephoneIbc);
         when(evidenceProperties.getAddress()).thenReturn(evidenceAddress);
 
         Map<String, String> englishMap = getEnglishMap();
@@ -316,30 +381,10 @@ public class PersonalisationTest {
         personalisationConfiguration.setPersonalisation(personalisations);
     }
 
-    private static Map<String, String> getWelshMap() {
-        Map<String, String> welshMap = new HashMap<>();
-        welshMap.put(PersonalisationKey.LANGUAGE_INTERPRETER.name(), "Dehonglydd iaith arwyddion: ");
-        welshMap.put(PersonalisationKey.SIGN_INTERPRETER.name(), "Dehonglydd iaith arwyddion: ");
-        welshMap.put(PersonalisationKey.HEARING_LOOP.name(), "Dolen glyw: ");
-        welshMap.put(PersonalisationKey.DISABLED_ACCESS.name(), "Mynediad i bobl anab: ");
-        welshMap.put(PersonalisationKey.OTHER_ARRANGEMENTS.name(), "Unrhyw drefniadau eraill: ");
-        welshMap.put(PersonalisationKey.REQUIRED.name(), "Gofynnol");
-        welshMap.put(PersonalisationKey.NOT_REQUIRED.name(), "Dim yn ofynnol");
-        return welshMap;
+    @AfterEach
+    void tearDown() throws Exception {
+        autoCloseable.close();
     }
-
-    private static Map<String, String> getEnglishMap() {
-        Map<String, String> englishMap = new HashMap<>();
-        englishMap.put(PersonalisationKey.LANGUAGE_INTERPRETER.name(), "Language interpreter: ");
-        englishMap.put(PersonalisationKey.SIGN_INTERPRETER.name(), "Sign interpreter: ");
-        englishMap.put(PersonalisationKey.HEARING_LOOP.name(), "Hearing loop: ");
-        englishMap.put(PersonalisationKey.DISABLED_ACCESS.name(), "Disabled access: ");
-        englishMap.put(PersonalisationKey.OTHER_ARRANGEMENTS.name(), "Any other arrangements: ");
-        englishMap.put(PersonalisationKey.REQUIRED.name(), "Required");
-        englishMap.put(PersonalisationKey.NOT_REQUIRED.name(), "Not required");
-        return englishMap;
-    }
-
 
     @ParameterizedTest
     @CsvSource({"APPEAL_TO_PROCEED, directionIssued.appealToProceed, APPELLANT",
@@ -351,7 +396,7 @@ public class PersonalisationTest {
         "REFUSE_REINSTATEMENT, directionIssued.refuseReinstatement, APPOINTEE",
         "REFUSE_HEARING_RECORDING_REQUEST, directionIssued.refuseHearingRecordingRequest, APPOINTEE"
     })
-    public void whenDirectionIssuedAndDirectionTypeShouldGenerateCorrectTemplate(DirectionType directionType,
+    void whenDirectionIssuedAndDirectionTypeShouldGenerateCorrectTemplate(DirectionType directionType,
                                                                                  String templateConfig,
                                                                                  SubscriptionType subscriptionType) {
 
@@ -384,7 +429,7 @@ public class PersonalisationTest {
         "JOINT_PARTY, refuseUrgentHearing, directionIssued.refuseUrgentHearing",
         "REPRESENTATIVE, refuseUrgentHearing, directionIssued.refuseUrgentHearing",
         "APPOINTEE, refuseUrgentHearing, directionIssued.refuseUrgentHearing"})
-    public void whenDirectionIssuedAndGrantOrRefuseUrgentHearingShouldGenerateCorrectTemplate(SubscriptionType subscriptionType, String directionTypeString, String templateConfig) {
+    void whenDirectionIssuedAndGrantOrRefuseUrgentHearingShouldGenerateCorrectTemplate(SubscriptionType subscriptionType, String directionTypeString, String templateConfig) {
 
         NotificationWrapper notificationWrapper = new CcdNotificationWrapper(NotificationSscsCaseDataWrapper.builder()
             .newSscsCaseData(SscsCaseData.builder()
@@ -415,7 +460,7 @@ public class PersonalisationTest {
         "JOINT_PARTY, refuseUrgentHearing, directionIssuedWelsh.refuseUrgentHearing",
         "REPRESENTATIVE, refuseUrgentHearing, directionIssuedWelsh.refuseUrgentHearing",
         "APPOINTEE, refuseUrgentHearing, directionIssuedWelsh.refuseUrgentHearing"})
-    public void whenDirectionIssuedWelshAndGrantOrRefuseUrgentHearingShouldGenerateCorrectTemplate(SubscriptionType subscriptionType, String directionTypeString, String templateConfig) {
+    void whenDirectionIssuedWelshAndGrantOrRefuseUrgentHearingShouldGenerateCorrectTemplate(SubscriptionType subscriptionType, String directionTypeString, String templateConfig) {
 
         NotificationWrapper notificationWrapper = new CcdNotificationWrapper(NotificationSscsCaseDataWrapper.builder()
             .newSscsCaseData(SscsCaseData.builder()
@@ -448,7 +493,7 @@ public class PersonalisationTest {
         "REFUSE_REINSTATEMENT, directionIssuedWelsh.refuseReinstatement, APPOINTEE",
         "REFUSE_HEARING_RECORDING_REQUEST, directionIssuedWelsh.refuseHearingRecordingRequest, APPOINTEE"
     })
-    public void whenDirectionIssuedWelshAndDirectionTypeShouldGenerateCorrectTemplate(DirectionType directionType,
+    void whenDirectionIssuedWelshAndDirectionTypeShouldGenerateCorrectTemplate(DirectionType directionType,
                                                                                       String templateConfig,
                                                                                       SubscriptionType subscriptionType) {
 
@@ -474,8 +519,118 @@ public class PersonalisationTest {
     }
 
     @ParameterizedTest
+    @CsvSource({
+        "APPELLANT, directionIssued.appealToProceedNotifyValidAppeal.appellant",
+        "APPOINTEE, directionIssued.appealToProceedNotifyValidAppeal.appointee"
+    })
+    void whenNotifyAppellantValidAppealWithAppealToProceedDirection_shouldGenerateDocmosisTemplateUnderValidAppeal(
+            SubscriptionType subscriptionType, String expectedDocmosisTemplate) {
+
+        final NotificationWrapper notificationWrapper = new CcdNotificationWrapper(NotificationSscsCaseDataWrapper.builder()
+            .newSscsCaseData(SscsCaseData.builder()
+                .directionTypeDl(new DynamicList(DirectionType.APPEAL_TO_PROCEED.toString()))
+                .appeal(Appeal.builder()
+                    .hearingType(ONLINE.getValue())
+                    .build())
+                .build())
+            .notificationEventType(NOTIFY_APPELLANT_VALID_APPEAL)
+            .build());
+
+        personalisation.getTemplate(notificationWrapper, PIP, subscriptionType);
+
+        verify(config).getTemplate(
+            eq(NOTIFY_APPELLANT_VALID_APPEAL.getId()),
+            eq(NOTIFY_APPELLANT_VALID_APPEAL.getId()),
+            eq(NOTIFY_APPELLANT_VALID_APPEAL.getId()),
+            eq(expectedDocmosisTemplate),
+            any(Benefit.class), any(NotificationWrapper.class), eq(null)
+        );
+    }
+
+    @ParameterizedTest
+    @CsvSource({
+        "APPELLANT, directionIssuedWelsh.appealToProceedNotifyValidAppeal.appellant",
+        "APPOINTEE, directionIssuedWelsh.appealToProceedNotifyValidAppeal.appointee"
+    })
+    void whenNotifyAppellantValidAppealInWelshWithAppealToProceedDirection_shouldGenerateDocmosisTemplateUnderValidAppeal(
+        SubscriptionType subscriptionType, String expectedDocmosisTemplate) {
+
+        final NotificationWrapper notificationWrapper = new CcdNotificationWrapper(NotificationSscsCaseDataWrapper.builder()
+                                                                                                                  .newSscsCaseData(SscsCaseData.builder()
+                                                                                                                                               .directionTypeDl(new DynamicList(DirectionType.APPEAL_TO_PROCEED.toString()))
+                                                                                                                                               .appeal(Appeal.builder()
+                                                                                                                                                             .hearingType(ONLINE.getValue())
+                                                                                                                                                             .build())
+                                                                                                                                               .build())
+                                                                                                                  .notificationEventType(NOTIFY_APPELLANT_VALID_APPEAL_WELSH)
+                                                                                                                  .build());
+
+        personalisation.getTemplate(notificationWrapper, CHILD_SUPPORT, subscriptionType);
+
+        verify(config).getTemplate(
+            eq(NOTIFY_APPELLANT_VALID_APPEAL_WELSH.getId()),
+            eq(NOTIFY_APPELLANT_VALID_APPEAL_WELSH.getId()),
+            eq(NOTIFY_APPELLANT_VALID_APPEAL_WELSH.getId()),
+            eq(expectedDocmosisTemplate),
+            any(Benefit.class), any(NotificationWrapper.class), eq(null)
+        );
+    }
+
+    @ParameterizedTest
+    @CsvSource({
+        "PROVIDE_INFORMATION",
+        "GRANT_EXTENSION",
+        "REFUSE_EXTENSION"
+    })
+    void whenNotifyAppellantValidAppealWithNonAppealToProceedDirection_shouldFallBackToEventId(DirectionType directionType) {
+
+        final NotificationWrapper notificationWrapper = new CcdNotificationWrapper(NotificationSscsCaseDataWrapper.builder()
+            .newSscsCaseData(SscsCaseData.builder()
+                .directionTypeDl(new DynamicList(directionType.toString()))
+                .appeal(Appeal.builder()
+                    .hearingType(ONLINE.getValue())
+                    .build())
+                .build())
+            .notificationEventType(NOTIFY_APPELLANT_VALID_APPEAL)
+            .build());
+
+        personalisation.getTemplate(notificationWrapper, PIP, SubscriptionType.APPELLANT);
+
+        verify(config).getTemplate(
+            eq(NOTIFY_APPELLANT_VALID_APPEAL.getId()),
+            eq(NOTIFY_APPELLANT_VALID_APPEAL.getId()),
+            eq(NOTIFY_APPELLANT_VALID_APPEAL.getId()),
+            eq(NOTIFY_APPELLANT_VALID_APPEAL.getId()),
+            any(Benefit.class), any(NotificationWrapper.class), eq(null)
+        );
+    }
+
+    @Test
+    void whenNotifyAppellantValidAppealWithNoDirectionTypeDl_shouldFallBackToEventId() {
+
+        final NotificationWrapper notificationWrapper = new CcdNotificationWrapper(NotificationSscsCaseDataWrapper.builder()
+            .newSscsCaseData(SscsCaseData.builder()
+                .appeal(Appeal.builder()
+                    .hearingType(ONLINE.getValue())
+                    .build())
+                .build())
+            .notificationEventType(NOTIFY_APPELLANT_VALID_APPEAL)
+            .build());
+
+        personalisation.getTemplate(notificationWrapper, PIP, SubscriptionType.APPELLANT);
+
+        verify(config).getTemplate(
+            eq(NOTIFY_APPELLANT_VALID_APPEAL.getId()),
+            eq(NOTIFY_APPELLANT_VALID_APPEAL.getId()),
+            eq(NOTIFY_APPELLANT_VALID_APPEAL.getId()),
+            eq(NOTIFY_APPELLANT_VALID_APPEAL.getId()),
+            any(Benefit.class), any(NotificationWrapper.class), eq(null)
+        );
+    }
+
+    @ParameterizedTest
     @MethodSource("generateNotificationTypeAndSubscriptionsScenarios")
-    public void givenSubscriptionType_shouldGenerateEmailAndSmsAndLetterTemplateNamesPerSubscription(
+    void givenSubscriptionType_shouldGenerateEmailAndSmsAndLetterTemplateNamesPerSubscription(
         NotificationEventType notificationEventType, SubscriptionType subscriptionType, HearingType hearingType,
         boolean hasEmailTemplate, boolean hasSmsTemplate, boolean hasLetterTemplate, boolean hasDocmosisTemplate) {
         NotificationWrapper notificationWrapper = new CcdNotificationWrapper(NotificationSscsCaseDataWrapper.builder()
@@ -496,12 +651,6 @@ public class PersonalisationTest {
             eq(hasDocmosisTemplate ? getExpectedTemplateName(notificationEventType, subscriptionType) : notificationEventType.getId()),
             any(Benefit.class), any(NotificationWrapper.class), eq(null)
         );
-    }
-
-    private String getExpectedTemplateName(NotificationEventType notificationEventType,
-                                           SubscriptionType subscriptionType) {
-        return notificationEventType.getId() + (subscriptionType == null ? "" :
-            "." + lowerCase(subscriptionType.name()));
     }
 
     @SuppressWarnings({"Indentation", "unused"})
@@ -566,12 +715,12 @@ public class PersonalisationTest {
             new Object[]{DWP_RESPONSE_RECEIVED, APPOINTEE, PAPER, true, true, true, false},
             new Object[]{DWP_RESPONSE_RECEIVED, REPRESENTATIVE, ONLINE, true, true, true, false},
             new Object[]{DWP_RESPONSE_RECEIVED, REPRESENTATIVE, PAPER, true, true, true, false},
-            new Object[]{DWP_UPLOAD_RESPONSE, APPELLANT, ONLINE, true, true, true, false},
-            new Object[]{DWP_UPLOAD_RESPONSE, APPELLANT, PAPER, true, true, true, false},
-            new Object[]{DWP_UPLOAD_RESPONSE, APPOINTEE, ONLINE, true, true, true, false},
-            new Object[]{DWP_UPLOAD_RESPONSE, APPOINTEE, PAPER, true, true, true, false},
-            new Object[]{DWP_UPLOAD_RESPONSE, REPRESENTATIVE, ONLINE, true, true, true, false},
-            new Object[]{DWP_UPLOAD_RESPONSE, REPRESENTATIVE, PAPER, true, true, true, false},
+            new Object[]{DWP_UPLOAD_RESPONSE, APPELLANT, ONLINE, true, true, false, true},
+            new Object[]{DWP_UPLOAD_RESPONSE, APPELLANT, PAPER, true, true, false, true},
+            new Object[]{DWP_UPLOAD_RESPONSE, APPOINTEE, ONLINE, true, true, false, true},
+            new Object[]{DWP_UPLOAD_RESPONSE, APPOINTEE, PAPER, true, true, false, true},
+            new Object[]{DWP_UPLOAD_RESPONSE, REPRESENTATIVE, ONLINE, true, true, false, true},
+            new Object[]{DWP_UPLOAD_RESPONSE, REPRESENTATIVE, PAPER, true, true, false, true},
             new Object[]{EVIDENCE_RECEIVED, APPELLANT, ONLINE, true, true, true, false},
             new Object[]{EVIDENCE_RECEIVED, APPELLANT, PAPER, true, true, true, false},
             new Object[]{EVIDENCE_RECEIVED, APPELLANT, REGULAR, true, true, true, false},
@@ -596,6 +745,7 @@ public class PersonalisationTest {
             new Object[]{ISSUE_FINAL_DECISION_WELSH, APPELLANT, ONLINE, false, false, false, true},
             new Object[]{ISSUE_FINAL_DECISION_WELSH, APPOINTEE, ONLINE, false, false, false, true},
             new Object[]{ISSUE_FINAL_DECISION_WELSH, REPRESENTATIVE, ONLINE, false, false, false, true},
+            new Object[]{OTHER_PARTY_ADDED_TO_APPEAL, APPELLANT, REGULAR, false, false, false, true},
             new Object[]{POSTPONEMENT, APPELLANT, ONLINE, true, true, false, true},
             new Object[]{POSTPONEMENT, APPELLANT, PAPER, true, true, false, true},
             new Object[]{POSTPONEMENT, APPELLANT, REGULAR, true, true, false, true},
@@ -640,23 +790,24 @@ public class PersonalisationTest {
 
     @ParameterizedTest
     @CsvSource({
-        "PIP,'judge, doctor and disability expert', Personal Independence Payment, Taliad Annibyniaeth Personol, 'barnwr, meddyg ac arbenigwr anableddau', PIP, PIP",
-        "ESA,judge and a doctor, Employment and Support Allowance, Lwfans Cyflogaeth a Chymorth, barnwr a meddyg, ESA, ESA",
-        "UC,'judge, doctor and disability expert (if applicable)', Universal Credit, Credyd Cynhwysol, 'barnwr, meddyg ac arbenigwr anabledd (os yw’n berthnasol)', UC, UC",
-        "DLA,'judge, doctor and disability expert', Disability Living Allowance, Lwfans Byw i’r Anabl, 'barnwr, meddyg ac arbenigwr anableddau', DLA,DLA",
-        "carersAllowance,judge, Carer's Allowance, Lwfans Gofalwr, barnwr, Carer's Allowance, Lwfans Gofalwr",
-        "attendanceAllowance,'judge, doctor and disability expert', Attendance Allowance, Lwfans Gweini, 'barnwr, meddyg ac arbenigwr anableddau', Attendance Allowance, Lwfans Gweini",
-        "bereavementBenefit,judge, Bereavement Benefit, Budd-dal Profedigaeth, barnwr, Bereavement Benefit, Budd-dal Profedigaeth",
-        "taxCredit, judge and Financially Qualified Panel Member (if applicable), Tax Credit, Credyd Treth, Barnwr ac Aelod Panel sydd â chymhwyster i ddelio gyda materion Ariannol (os yw’n berthnasol), Tax Credit, Credyd Treth",
-        "infectedBloodCompensation,judge and if applicable a medical member and/or a financially qualified tribunal member, Infected Blood Compensation, Iawndal Gwaed Heintiedig, barnwr ac os yw’n berthnasol aelod meddygol a/neu aelod o’r tribiwnlys sy’n gymwys mewn materion ariannol, IBC, IGH"
+        "PIP,'judge, doctor and disability expert', Personal Independence Payment, Taliad Annibyniaeth Personol, 'barnwr, meddyg ac arbenigwr anableddau', PIP, PIP, sscs1",
+        "ESA,judge and a doctor, Employment and Support Allowance, Lwfans Cyflogaeth a Chymorth, barnwr a meddyg, ESA, ESA, sscs1",
+        "UC,'judge and doctor (if applicable)', Universal Credit, Credyd Cynhwysol, 'barnwr a meddyg (os yw’n berthnasol)', UC, UC, sscs1",
+        "DLA,'judge, doctor and disability expert', Disability Living Allowance, Lwfans Byw i’r Anabl, 'barnwr, meddyg ac arbenigwr anableddau', DLA,DLA, sscs1",
+        "carersAllowance,judge, Carer's Allowance, Lwfans Gofalwr, barnwr, Carer's Allowance, Lwfans Gofalwr, sscs1",
+        "attendanceAllowance,'judge, doctor and disability expert', Attendance Allowance, Lwfans Gweini, 'barnwr, meddyg ac arbenigwr anableddau', Attendance Allowance, Lwfans Gweini, sscs1",
+        "bereavementBenefit,judge, Bereavement Benefit, Budd-dal Profedigaeth, barnwr, Bereavement Benefit, Budd-dal Profedigaeth, sscs1",
+        "taxCredit, judge and Financially Qualified Panel Member (if applicable), Tax Credit, Credyd Treth, Barnwr ac Aelod Panel sydd â chymhwyster i ddelio gyda materion Ariannol (os yw’n berthnasol), Tax Credit, Credyd Treth, sscs5",
+        "infectedBloodCompensation,judge and if applicable a medical member and/or a financially qualified tribunal member, Infected Blood Compensation, Iawndal Gwaed Heintiedig, barnwr ac os yw’n berthnasol aelod meddygol a/neu aelod o’r tribiwnlys sy’n gymwys mewn materion ariannol, IBC, IGH, sscs8"
     })
-    public void customisePersonalisation(String benefitType,
+    void customisePersonalisation(String benefitType,
                                          String expectedPanelComposition,
                                          String expectedBenefitDesc,
                                          String welshExpectedBenefitDesc,
                                          String welshExpectedPanelComposition,
                                          String expectedAcronym,
-                                         String expectedWelshAcronym) {
+                                         String expectedWelshAcronym,
+                                         String formType) {
         List<Event> events = new ArrayList<>();
         events.add(Event.builder().value(EventDetails.builder().date(DATE).type(EventType.APPEAL_RECEIVED.getCcdType()).build()).build());
 
@@ -686,6 +837,7 @@ public class PersonalisationTest {
         assertEquals(expectedWelshAcronym, result.get(BENEFIT_NAME_ACRONYM_LITERAL_WELSH));
         assertEquals(expectedBenefitDesc, result.get(BENEFIT_FULL_NAME_LITERAL));
         assertEquals(welshExpectedBenefitDesc, result.get(BENEFIT_FULL_NAME_LITERAL_WELSH));
+        assertEquals(formType, result.get(FORM_TYPE));
         assertEquals(getLongBenefitNameDescriptionWithOptionalAcronym(benefitType, true), result.get(BENEFIT_NAME_AND_OPTIONAL_ACRONYM));
         assertEquals(getLongBenefitNameDescriptionWithOptionalAcronym(benefitType, false), result.get(BENEFIT_NAME_AND_OPTIONAL_ACRONYM_WELSH));
         assertEquals("SC/1234/5", result.get(APPEAL_REF));
@@ -704,7 +856,7 @@ public class PersonalisationTest {
             assertEquals(HMRC_ACRONYM, result.get(FIRST_TIER_AGENCY_GROUP_WELSH));
             assertEquals("", result.get(WITH_OPTIONAL_THE));
             assertEquals("", result.get(WITH_OPTIONAL_THE_WELSH));
-            assertEquals("0300 999 8888", result.get(PHONE_NUMBER));
+            assertEquals(PHONE, result.get(PHONE_NUMBER));
             assertEquals(PHONE_WELSH, result.get(PHONE_NUMBER_WELSH));
         } else if (benefitType.equals("infectedBloodCompensation")) {
             assertEquals(IBCA_ACRONYM, result.get(FIRST_TIER_AGENCY_ACRONYM));
@@ -714,9 +866,9 @@ public class PersonalisationTest {
             assertEquals(IBCA_FIRST_TIER_AGENCY_GROUP_WELSH, result.get(FIRST_TIER_AGENCY_GROUP_WELSH));
             assertEquals("", result.get(WITH_OPTIONAL_THE));
             assertEquals("", result.get(WITH_OPTIONAL_THE_WELSH));
-            assertEquals("01274267247", result.get(HELPLINE_PHONE_NUMBER));
-            assertEquals("0300 303 5170", result.get(PHONE_NUMBER_WELSH));
-            assertEquals("01274267247", result.get(PHONE_NUMBER));
+            assertEquals(PHONE_IBC, result.get(HELPLINE_PHONE_NUMBER));
+            assertEquals(PHONE_WELSH, result.get(PHONE_NUMBER_WELSH));
+            assertEquals(PHONE_IBC, result.get(PHONE_NUMBER));
         } else {
             assertEquals(DWP_ACRONYM, result.get(FIRST_TIER_AGENCY_ACRONYM));
             assertEquals(DWP_FULL_NAME, result.get(FIRST_TIER_AGENCY_FULL_NAME));
@@ -725,7 +877,7 @@ public class PersonalisationTest {
             assertEquals(DWP_FIRST_TIER_AGENCY_GROUP_WELSH, result.get(FIRST_TIER_AGENCY_GROUP_WELSH));
             assertEquals(THE_STRING, result.get(WITH_OPTIONAL_THE));
             assertEquals(THE_STRING_WELSH, result.get(WITH_OPTIONAL_THE_WELSH));
-            assertEquals("0300 999 8888", result.get(PHONE_NUMBER));
+            assertEquals(PHONE, result.get(PHONE_NUMBER));
             assertEquals(PHONE_WELSH, result.get(PHONE_NUMBER_WELSH));
         }
 
@@ -736,7 +888,7 @@ public class PersonalisationTest {
         assertNull(result.get(EVIDENCE_RECEIVED_DATE_LITERAL));
         assertEquals(EMPTY, result.get(JOINT));
         assertEquals(EMPTY, result.get(JOINT_WELSH));
-        assertNull(result.get(JOINT_PARTY));
+        assertNull(result.get(JOINT_PARTY.name()));
 
         assertEquals(ADDRESS1, result.get(REGIONAL_OFFICE_NAME_LITERAL));
         assertEquals(ADDRESS2, result.get(SUPPORT_CENTRE_NAME_LITERAL));
@@ -753,7 +905,7 @@ public class PersonalisationTest {
 
     @ParameterizedTest
     @CsvSource({", SSCS1", ", SSCS2", ", SSCS5", ", SSCS8", ","})
-    public void givenFormTypeWithNoBenefitType_customisePersonalisation(String benefitType, FormType formType) {
+    void givenFormTypeWithNoBenefitType_customisePersonalisation(String benefitType, FormType formType) {
         List<Event> events = new ArrayList<>();
         events.add(Event.builder().value(EventDetails.builder().date(DATE).type(EventType.APPEAL_RECEIVED.getCcdType()).build()).build());
 
@@ -787,7 +939,7 @@ public class PersonalisationTest {
         assertEquals("GLSCRR", result.get(APPEAL_ID_LITERAL));
         assertEquals("Harry Kane", result.get(NAME));
         assertEquals("Harry Kane", result.get(APPELLANT_NAME));
-        assertEquals("0300 999 8888", result.get(PHONE_NUMBER));
+        assertEquals(PHONE, result.get(PHONE_NUMBER));
         assertEquals(PHONE_WELSH, result.get(PHONE_NUMBER_WELSH));
         assertNull(result.get(MANAGE_EMAILS_LINK_LITERAL));
         assertEquals("http://tyalink.com/GLSCRR", result.get(TRACK_APPEAL_LINK_LITERAL));
@@ -838,7 +990,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void givenNoRpc_thenGivePhoneNumberBasedOnSc() {
+    void givenNoRpc_thenGivePhoneNumberBasedOnSc() {
         List<Event> events = new ArrayList<>();
         events.add(Event.builder().value(EventDetails.builder().date(DATE).type(EventType.APPEAL_RECEIVED.getCcdType()).build()).build());
 
@@ -855,16 +1007,16 @@ public class PersonalisationTest {
         Map<String, Object> result = personalisation.create(NotificationSscsCaseDataWrapper.builder().newSscsCaseData(response)
             .notificationEventType(APPEAL_RECEIVED).build(), new SubscriptionWithType(subscriptions.getAppellantSubscription(), APPELLANT, response.getAppeal().getAppellant(), response.getAppeal().getAppellant()));
 
-        assertEquals("0300 999 8888", result.get(PHONE_NUMBER));
+        assertEquals(PHONE, result.get(PHONE_NUMBER));
     }
 
     @ParameterizedTest
     @CsvSource({"readyToList,0300 790 6234", ",telephone"})
-    public void givenRpcAndReadyToList_thenGiveCorrectPhoneNumber(String createdInGapsFrom, String phone) {
+    void givenRpcAndReadyToList_thenGiveCorrectPhoneNumber(String createdInGapsFrom, String phone) {
         List<Event> events = new ArrayList<>();
         events.add(Event.builder().value(EventDetails.builder().date(DATE).type(EventType.APPEAL_RECEIVED.getCcdType()).build()).build());
 
-        RegionalProcessingCenter rpc = RegionalProcessingCenter
+        rpc = RegionalProcessingCenter
             .builder()
             .name("GLASGOW")
             .phoneNumber(phone)
@@ -890,7 +1042,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void appealRefWillReturnCcdCaseIdWhenCaseReferenceIsNotSet() {
+    void appealRefWillReturnCcdCaseIdWhenCaseReferenceIsNotSet() {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID).caseReference(null)
             .regionalProcessingCenter(rpc)
@@ -908,7 +1060,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void testCorrectionGrantedDwpState() {
+    void testCorrectionGrantedDwpState() {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID).caseReference(null)
             .dwpState(DwpState.CORRECTION_GRANTED)
@@ -925,7 +1077,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void testCorrectionRefusedDwpState() {
+    void testCorrectionRefusedDwpState() {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID).caseReference(null)
             .dwpState(DwpState.CORRECTION_REFUSED)
@@ -942,7 +1094,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void appealRefWillReturnCcdCaseIdWhenCreatedInGapsFromReadyToList() {
+    void appealRefWillReturnCcdCaseIdWhenCreatedInGapsFromReadyToList() {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID).caseReference("SC/1234/5")
             .regionalProcessingCenter(rpc)
@@ -961,7 +1113,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void appealRefWillReturnCaseReferenceWhenCreatedInGapsFromValidAppeal() {
+    void appealRefWillReturnCaseReferenceWhenCreatedInGapsFromValidAppeal() {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID).caseReference("SC/1234/5")
             .regionalProcessingCenter(rpc)
@@ -980,7 +1132,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void givenEvidenceReceivedNotification_customisePersonalisation() {
+    void givenEvidenceReceivedNotification_customisePersonalisation() {
         List<Event> events = new ArrayList<>();
         events.add(Event.builder().value(EventDetails.builder().date(DATE).type(EventType.APPEAL_RECEIVED.getCcdType()).build()).build());
 
@@ -1003,7 +1155,7 @@ public class PersonalisationTest {
             .subscribeSms("No")
             .build();
 
-        Subscriptions subscriptions = Subscriptions.builder().appellantSubscription(appellantSubscription).build();
+        subscriptions = Subscriptions.builder().appellantSubscription(appellantSubscription).build();
 
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID).caseReference("SC/1234/5")
@@ -1024,7 +1176,7 @@ public class PersonalisationTest {
 
 
     @Test
-    public void givenEvidenceReceivedNotification_customisePersonalisation_welsh() {
+    void givenEvidenceReceivedNotification_customisePersonalisation_welsh() {
         List<Event> events = new ArrayList<>();
         events.add(Event.builder().value(EventDetails.builder().date(DATE).type(EventType.APPEAL_RECEIVED.getCcdType()).build()).build());
 
@@ -1047,7 +1199,7 @@ public class PersonalisationTest {
             .subscribeSms("No")
             .build();
 
-        Subscriptions subscriptions = Subscriptions.builder().appellantSubscription(appellantSubscription).build();
+        subscriptions = Subscriptions.builder().appellantSubscription(appellantSubscription).build();
 
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID).caseReference("SC/1234/5")
@@ -1068,7 +1220,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void setAppealReceivedEventData() {
+    void setAppealReceivedEventData() {
         List<Event> events = new ArrayList<>();
         events.add(Event.builder().value(EventDetails.builder().date(DATE).type(EventType.APPEAL_RECEIVED.getCcdType()).build()).build());
 
@@ -1086,7 +1238,7 @@ public class PersonalisationTest {
 
 
     @Test
-    public void setAppealReceivedEventData_Welsh() {
+    void setAppealReceivedEventData_Welsh() {
         List<Event> events = new ArrayList<>();
         events.add(Event.builder().value(EventDetails.builder().date(DATE).type(EventType.APPEAL_RECEIVED.getCcdType()).build()).build());
 
@@ -1103,7 +1255,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void setAppealReceivedChildSupportEventData_Welsh() {
+    void setAppealReceivedChildSupportEventData_Welsh() {
         List<Event> events = new ArrayList<>();
         events.add(Event.builder().value(EventDetails.builder().date(DATE).type(EventType.APPEAL_RECEIVED.getCcdType()).build()).build());
 
@@ -1120,7 +1272,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void givenDigitalCaseWithDateSentToDwp_thenUseCaseSentToDwpDateForAppealRespondDate() {
+    void givenDigitalCaseWithDateSentToDwp_thenUseCaseSentToDwpDateForAppealRespondDate() {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID).caseReference("SC/1234/5")
             .appeal(Appeal.builder().benefitType(BenefitType.builder().code("PIP").build()).build())
@@ -1134,7 +1286,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void givenDigitalCaseWithDateSentToDwp_thenUseCaseSentToDwpDateForAppealRespondDate_Welsh() {
+    void givenDigitalCaseWithDateSentToDwp_thenUseCaseSentToDwpDateForAppealRespondDate_Welsh() {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID).caseReference("SC/1234/5")
             .appeal(Appeal.builder().benefitType(BenefitType.builder().code("PIP").build()).build())
@@ -1150,7 +1302,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void setAppealReceivedChildSupportEventData() {
+    void setAppealReceivedChildSupportEventData() {
         List<Event> events = new ArrayList<>();
         events.add(Event.builder().value(EventDetails.builder().date(DATE).type(EventType.APPEAL_RECEIVED.getCcdType()).build()).build());
 
@@ -1166,21 +1318,28 @@ public class PersonalisationTest {
         assertEquals("12 August 2018", result.get(APPEAL_RESPOND_DATE));
     }
 
-    @Test
-    public void givenDigitalCaseWithNoDateSentToDwp_thenUseTodaysDateForAppealRespondDate() {
+    @ParameterizedTest
+    @MethodSource("appealResponseDate")
+    void givenDigitalCaseWithNoDateSentToDwp_thenUseTodaysDateForAppealRespondDate(
+        Appeal appeal, int responsePeriod) {
+
         SscsCaseData response = SscsCaseData.builder()
-            .ccdCaseId(CASE_ID).caseReference("SC/1234/5")
-            .appeal(Appeal.builder().benefitType(BenefitType.builder().code("PIP").build()).build())
+            .ccdCaseId(CASE_ID)
+            .caseReference("SC/1234/5")
+            .appeal(appeal)
             .createdInGapsFrom("readyToList")
             .build();
 
         Map<String, Object> result = personalisation.setEventData(new HashMap<>(), response, APPEAL_RECEIVED);
 
-        assertEquals(LocalDate.now().plusDays(personalisation.calculateMaxDwpResponseDays(response.getBenefitCode())).format(DateTimeFormatter.ofPattern(RESPONSE_DATE_FORMAT)), result.get(APPEAL_RESPOND_DATE));
+        assertThat(result)
+            .containsEntry(APPEAL_RESPOND_DATE, LocalDate.now()
+                .plusDays(responsePeriod)
+                .format(DateTimeFormatter.ofPattern(RESPONSE_DATE_FORMAT)));
     }
 
     @Test
-    public void givenCaseWithCreatedDate_thenUseCreatedDate() {
+    void givenCaseWithCreatedDate_thenUseCreatedDate() {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID)
             .appeal(Appeal.builder().benefitType(BenefitType.builder().code("PIP").build())
@@ -1198,7 +1357,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void givenCaseWithCreatedDateSetToNull_thenUseTodaysDateForCreatedDate() {
+    void givenCaseWithCreatedDateSetToNull_thenUseTodaysDateForCreatedDate() {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID)
             .appeal(Appeal.builder().benefitType(BenefitType.builder().code("PIP").build())
@@ -1216,7 +1375,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void setJudgeDecisionAppealToProceedEventData() {
+    void setJudgeDecisionAppealToProceedEventData() {
         List<Event> events = new ArrayList<>();
         events.add(Event.builder().value(EventDetails.builder().date(DATE).type(JUDGE_DECISION_APPEAL_TO_PROCEED.getId()).build()).build());
 
@@ -1232,7 +1391,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void setTcwDecisionAppealToProceedEventData() {
+    void setTcwDecisionAppealToProceedEventData() {
         List<Event> events = new ArrayList<>();
         events.add(Event.builder().value(EventDetails.builder().date(DATE).type(TCW_DECISION_APPEAL_TO_PROCEED.getId()).build()).build());
 
@@ -1248,7 +1407,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void setEvidenceReceivedEventData() {
+    void setEvidenceReceivedEventData() {
         List<Document> documents = new ArrayList<>();
 
         Document doc = Document.builder().value(DocumentDetails.builder()
@@ -1272,7 +1431,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void setEvidenceReceivedEventDataWhenEvidenceIsEmpty() {
+    void setEvidenceReceivedEventDataWhenEvidenceIsEmpty() {
         Evidence evidence = Evidence.builder().documents(null).build();
 
         SscsCaseData response = SscsCaseData.builder()
@@ -1289,7 +1448,7 @@ public class PersonalisationTest {
 
     @ParameterizedTest
     @MethodSource("generateHearingNotificationTypeAndSubscriptionsScenarios")
-    public void givenHearingData_correctlySetTheHearingDetails(NotificationEventType hearingNotificationEventType,
+    void givenHearingData_correctlySetTheHearingDetails(NotificationEventType hearingNotificationEventType,
                                                                SubscriptionType subscriptionType) {
         LocalDate hearingDate = LocalDate.now().plusDays(7);
 
@@ -1320,7 +1479,7 @@ public class PersonalisationTest {
 
     @ParameterizedTest
     @MethodSource("generateHearingNotificationTypeAndSubscriptionsScenarios")
-    public void givenHearingData_correctlySetTheHearingDetails_welsh(NotificationEventType hearingNotificationEventType,
+    void givenHearingData_correctlySetTheHearingDetails_welsh(NotificationEventType hearingNotificationEventType,
                                                                      SubscriptionType subscriptionType) {
         LocalDate hearingDate = LocalDate.now().plusDays(7);
 
@@ -1351,19 +1510,8 @@ public class PersonalisationTest {
         assertEquals("in 7 days", result.get(DAYS_TO_HEARING_LITERAL));
     }
 
-    @SuppressWarnings({"Indentation", "unused"})
-    private static Object[] generateHearingNotificationTypeAndSubscriptionsScenarios() {
-        return new Object[]{
-            new Object[]{HEARING_BOOKED, APPELLANT},
-            new Object[]{HEARING_BOOKED, APPOINTEE},
-
-            new Object[]{HEARING_REMINDER, APPELLANT},
-            new Object[]{HEARING_REMINDER, APPOINTEE},
-        };
-    }
-
     @Test
-    public void givenOnlyOneDayUntilHearing_correctlySetTheDaysToHearingText() {
+    void givenOnlyOneDayUntilHearing_correctlySetTheDaysToHearingText() {
         LocalDate hearingDate = LocalDate.now().plusDays(1);
 
         Hearing hearing = createHearing(hearingDate);
@@ -1387,7 +1535,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void checkWelshDatesAreSet() {
+    void checkWelshDatesAreSet() {
         LocalDate hearingDate = LocalDate.now().plusDays(1);
 
         Hearing hearing = createHearing(hearingDate);
@@ -1413,7 +1561,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void checkWelshDataAreNotSet() {
+    void checkWelshDataAreNotSet() {
         LocalDate hearingDate = LocalDate.now().plusDays(1);
 
         Hearing hearing = createHearing(hearingDate);
@@ -1438,7 +1586,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void checkListAssistDataIsSet() {
+    void checkListAssistDataIsSet() {
         LocalDateTime hearingDate = LocalDateTime.now().plusDays(1);
 
         Hearing hearing = createListAssistHearing(hearingDate);
@@ -1479,7 +1627,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void shouldReturnOverrideFieldsDirectionHearingForFaceToFaceHearingBookedNotification() {
+    void shouldReturnOverrideFieldsDirectionHearingForFaceToFaceHearingBookedNotification() {
         LocalDateTime hearingDate = LocalDateTime.now().plusDays(1);
 
         Hearing hearing = createListAssistHearing(hearingDate);
@@ -1504,11 +1652,11 @@ public class PersonalisationTest {
             .notificationEventType(HEARING_BOOKED).build(), new SubscriptionWithType(subscriptions.getAppellantSubscription(), APPELLANT, response.getAppeal().getAppellant(), response.getAppeal().getAppellant()));
 
         assertThat(result.get(HMC_HEARING_TYPE_LITERAL)).isNotNull();
-        assertThat(result.get(HMC_HEARING_TYPE_LITERAL)).isEqualTo("BBA3-DIR");
+        assertThat(result).containsEntry(HMC_HEARING_TYPE_LITERAL, "BBA3-DIR");
     }
 
     @Test
-    public void shouldReturnOverrideFieldsSubstantiveHearingForFaceToFaceHearingBookedNotification() {
+    void shouldReturnOverrideFieldsSubstantiveHearingForFaceToFaceHearingBookedNotification() {
         LocalDateTime hearingDate = LocalDateTime.now().plusDays(1);
 
         Hearing hearing = createListAssistHearing(hearingDate);
@@ -1533,11 +1681,11 @@ public class PersonalisationTest {
             .notificationEventType(HEARING_BOOKED).build(), new SubscriptionWithType(subscriptions.getAppellantSubscription(), APPELLANT, response.getAppeal().getAppellant(), response.getAppeal().getAppellant()));
 
         assertThat(result.get(HMC_HEARING_TYPE_LITERAL)).isNotNull();
-        assertThat(result.get(HMC_HEARING_TYPE_LITERAL)).isEqualTo("BBA3-SUB");
+        assertThat(result).containsEntry(HMC_HEARING_TYPE_LITERAL, "BBA3-SUB");
     }
 
     @Test
-    public void shouldReturnDirectionHearingForFaceToFaceHearingBookedNotification() {
+    void shouldReturnDirectionHearingForFaceToFaceHearingBookedNotification() {
         LocalDateTime hearingDate = LocalDateTime.now().plusDays(1);
 
         Hearing hearing = createListAssistHearing(hearingDate);
@@ -1562,11 +1710,11 @@ public class PersonalisationTest {
             .notificationEventType(HEARING_BOOKED).build(), new SubscriptionWithType(subscriptions.getAppellantSubscription(), APPELLANT, response.getAppeal().getAppellant(), response.getAppeal().getAppellant()));
 
         assertThat(result.get(HMC_HEARING_TYPE_LITERAL)).isNotNull();
-        assertThat(result.get(HMC_HEARING_TYPE_LITERAL)).isEqualTo("BBA3-DIR");
+        assertThat(result).containsEntry(HMC_HEARING_TYPE_LITERAL, "BBA3-DIR");
     }
 
     @Test
-    public void shouldReturnSubstantiveAsNullHearingForFaceToFaceHearingBookedNotification() {
+    void shouldReturnSubstantiveAsNullHearingForFaceToFaceHearingBookedNotification() {
         LocalDateTime hearingDate = LocalDateTime.now().plusDays(1);
 
         Hearing hearing = createListAssistHearing(hearingDate);
@@ -1590,11 +1738,11 @@ public class PersonalisationTest {
             .notificationEventType(HEARING_BOOKED).build(), new SubscriptionWithType(subscriptions.getAppellantSubscription(), APPELLANT, response.getAppeal().getAppellant(), response.getAppeal().getAppellant()));
 
         assertThat(result.get(HMC_HEARING_TYPE_LITERAL)).isNotNull();
-        assertThat(result.get(HMC_HEARING_TYPE_LITERAL)).isEqualTo("BBA3-SUB");
+        assertThat(result).containsEntry(HMC_HEARING_TYPE_LITERAL, "BBA3-SUB");
     }
 
     @Test
-    public void shouldReturnSubstantiveHearingForFaceToFaceHearingBookedNotification() {
+    void shouldReturnSubstantiveHearingForFaceToFaceHearingBookedNotification() {
         LocalDateTime hearingDate = LocalDateTime.now().plusDays(1);
 
         Hearing hearing = createListAssistHearing(hearingDate);
@@ -1619,11 +1767,11 @@ public class PersonalisationTest {
             .notificationEventType(HEARING_BOOKED).build(), new SubscriptionWithType(subscriptions.getAppellantSubscription(), APPELLANT, response.getAppeal().getAppellant(), response.getAppeal().getAppellant()));
 
         assertThat(result.get(HMC_HEARING_TYPE_LITERAL)).isNotNull();
-        assertThat(result.get(HMC_HEARING_TYPE_LITERAL)).isEqualTo("BBA3-SUB");
+        assertThat(result).containsEntry(HMC_HEARING_TYPE_LITERAL, "BBA3-SUB");
     }
 
     @Test
-    public void handleNullEventWhenPopulatingEventData() {
+    void handleNullEventWhenPopulatingEventData() {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID).caseReference("SC/1234/5")
             .appeal(Appeal.builder().benefitType(BenefitType.builder().code("PIP").build()).build())
@@ -1635,7 +1783,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void handleEmptyEventsWhenPopulatingEventData() {
+    void handleEmptyEventsWhenPopulatingEventData() {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID).caseReference("SC/1234/5")
             .appeal(Appeal.builder().benefitType(BenefitType.builder().code("PIP").build()).build())
@@ -1648,8 +1796,8 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void shouldPopulateRegionalProcessingCenterFromCcdCaseIfItsPresent() {
-        RegionalProcessingCenter rpc = RegionalProcessingCenter.builder()
+    void shouldPopulateRegionalProcessingCenterFromCcdCaseIfItsPresent() {
+        rpc = RegionalProcessingCenter.builder()
             .name("LIVERPOOL").address1(ADDRESS1).address2(ADDRESS2).address3(ADDRESS3).address4(ADDRESS4).city(CITY).postcode(POSTCODE).build();
 
         SscsCaseData response = SscsCaseData.builder().regionalProcessingCenter(rpc).build();
@@ -1667,15 +1815,22 @@ public class PersonalisationTest {
     }
 
     @ParameterizedTest
-    @CsvSource({"yes, scottishLine3, scottishPostcode, true",
-        "no, line3, postcode, true",
-        "yes, line3, postcode, false",
-        "no, line3, postcode, false"})
-    public void shouldPopulateSendEvidenceAddressToDigitalAddressWhenOnTheDigitalJourney(String isScottish, String expectedLine3, String expectedPostcode, boolean scottishPoBoxFeature) {
+    @CsvSource({
+        "false, yes, scottishLine3, scottishPostcode, true",
+        "false, no, line3, postcode, true",
+        "false, yes, line3, postcode, false",
+        "false, no, line3, postcode, false",
+        "true, yes, scottishLine3, scottishPostcode, true",
+        "true, no, ibcLine3, ibcPostcode, true",
+        "true, yes, ibcLine3, ibcPostcode, false",
+        "true, no, ibcLine3, ibcPostcode, false"
+    })
+    void shouldPopulateSendEvidenceAddressToDigitalAddressWhenOnTheDigitalJourney(boolean isIbc, String isScottish, String expectedLine3, String expectedPostcode, boolean scottishPoBoxFeature) {
 
         SscsCaseData response = SscsCaseData.builder()
             .createdInGapsFrom(EventType.READY_TO_LIST.getCcdType())
             .isScottishCase(isScottish)
+            .benefitCode(isIbc ? "093" : null)
             .build();
 
         evidenceAddress.setScottishPoBoxFeatureEnabled(scottishPoBoxFeature);
@@ -1683,17 +1838,17 @@ public class PersonalisationTest {
         Map<String, Object> result = personalisation.setEvidenceProcessingAddress(new HashMap<>(), response);
 
         assertEquals(evidenceAddressLine1, result.get(REGIONAL_OFFICE_NAME_LITERAL));
-        assertEquals(evidenceAddressLine2, result.get(SUPPORT_CENTRE_NAME_LITERAL));
+        assertEquals(isIbc ? evidenceIbcAddressLine2 : evidenceAddressLine2, result.get(SUPPORT_CENTRE_NAME_LITERAL));
         assertEquals(expectedLine3, result.get(ADDRESS_LINE_LITERAL));
         assertEquals(evidenceAddressTown, result.get(TOWN_LITERAL));
         assertEquals(evidenceAddressCounty, result.get(COUNTY_LITERAL));
         assertEquals(expectedPostcode, result.get(POSTCODE_LITERAL));
-        assertEquals(evidenceAddressTelephone, result.get(PHONE_NUMBER));
+        assertEquals(isIbc ? PHONE_IBC : evidenceAddressTelephone, result.get(PHONE_NUMBER));
         assertEquals(evidenceAddressTelephoneWelsh, result.get(PHONE_NUMBER_WELSH));
     }
 
     @Test
-    public void shouldNotPopulateRegionalProcessingCenterIfRpcCannotBeFound() {
+    void shouldNotPopulateRegionalProcessingCenterIfRpcCannotBeFound() {
 
         SscsCaseData response = SscsCaseData.builder().regionalProcessingCenter(null).build();
 
@@ -1712,7 +1867,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void shouldPopulateHearingContactDateFromCcdCaseIfPresent() {
+    void shouldPopulateHearingContactDateFromCcdCaseIfPresent() {
 
         NotificationSscsCaseDataWrapper wrapper = NotificationSscsCaseDataWrapper.builder().newSscsCaseData(SscsCaseData.builder().build()).build();
 
@@ -1726,7 +1881,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void shouldNotPopulateHearingContactDateFromCcdCaseIfNotPresent() {
+    void shouldNotPopulateHearingContactDateFromCcdCaseIfNotPresent() {
 
         NotificationSscsCaseDataWrapper wrapper = NotificationSscsCaseDataWrapper.builder().newSscsCaseData(SscsCaseData.builder().build()).build();
 
@@ -1740,7 +1895,7 @@ public class PersonalisationTest {
 
 
     @Test
-    public void shouldPopulateAppointeeSubscriptionPersonalisation() {
+    void shouldPopulateAppointeeSubscriptionPersonalisation() {
         final String tyaNumber = "tya";
         Name appointeeName = Name.builder().title("MR").firstName("George").lastName("Appointee").build();
         when(macService.generateToken(tyaNumber, PIP.name())).thenReturn("ZYX");
@@ -1792,7 +1947,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void shouldPopulateRepSubscriptionPersonalisation() {
+    void shouldPopulateRepSubscriptionPersonalisation() {
         final String tyaNumber = "tya";
         final String repTyaNumber = "repTya";
         when(macService.generateToken(repTyaNumber, PIP.name())).thenReturn("ZYX");
@@ -1844,7 +1999,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void shouldPopulateJointPartySubscriptionPersonalisation() {
+    void shouldPopulateJointPartySubscriptionPersonalisation() {
         final String tyaNumber = "tya";
         final String jointPartyTyaNumber = "jointPartyTya";
         when(macService.generateToken(jointPartyTyaNumber, PIP.name())).thenReturn("ZYX");
@@ -1904,7 +2059,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void shouldPopulateOtherPartySubscriptionPersonalisation() {
+    void shouldPopulateOtherPartySubscriptionPersonalisation() {
         final String tyaNumber = "tya";
         final String otherPartyTyaNumber = "otherPartyTya";
         when(macService.generateToken(otherPartyTyaNumber, PIP.name())).thenReturn("ZYX");
@@ -1943,7 +2098,7 @@ public class PersonalisationTest {
                 .build())
             .build();
 
-        OtherParty otherParty = sscsCaseData.getOtherParties().get(0).getValue();
+        OtherParty otherParty = sscsCaseData.getOtherParties().getFirst().getValue();
         Map<String, Object> result = personalisation.create(NotificationSscsCaseDataWrapper.builder()
                 .newSscsCaseData(sscsCaseData)
                 .notificationEventType(SUBSCRIPTION_CREATED)
@@ -1962,7 +2117,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void shouldHandleNoSubscription() {
+    void shouldHandleNoSubscription() {
         when(macService.generateToken(EMPTY, PIP.name())).thenReturn("ZYX");
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID).caseReference(null)
@@ -1979,12 +2134,12 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void getLatestInfoRequestDetailWhenNoneProvided() {
+    void getLatestInfoRequestDetailWhenNoneProvided() {
         assertNull(Personalisation.getLatestInfoRequestDetail(createResponseWithInfoRequests(null)));
     }
 
     @Test
-    public void getLatestInfoRequestDetailWhenOneProvided() {
+    void getLatestInfoRequestDetailWhenOneProvided() {
         String expected = "Request for information";
 
         List<AppellantInfoRequest> requests = Collections.singletonList(
@@ -2007,7 +2162,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void getLatestInfoRequestDetailWhenMultipleProvided() {
+    void getLatestInfoRequestDetailWhenMultipleProvided() {
         String expected = "Final request for information";
 
         List<AppellantInfoRequest> requests = Arrays.asList(
@@ -2046,7 +2201,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void trackYourAppealWillReturnMyaLinkWhenCreatedInGapsFromReadyToList() {
+    void trackYourAppealWillReturnMyaLinkWhenCreatedInGapsFromReadyToList() {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID).caseReference("SC/1234/5")
             .regionalProcessingCenter(rpc)
@@ -2068,7 +2223,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void trackYourAppealWillReturnTyaLinkWhenCreatedInGapsFromIsNotReadyToList() {
+    void trackYourAppealWillReturnTyaLinkWhenCreatedInGapsFromIsNotReadyToList() {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID).caseReference("SC/1234/5")
             .regionalProcessingCenter(rpc)
@@ -2091,7 +2246,7 @@ public class PersonalisationTest {
 
     @ParameterizedTest
     @CsvSource({"GRANTED", "REFUSED"})
-    public void givenConfidentialRequestForAppellant_thenSetConfidentialFields(RequestOutcome requestOutcome) {
+    void givenConfidentialRequestForAppellant_thenSetConfidentialFields(RequestOutcome requestOutcome) {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID)
             .appeal(Appeal.builder().benefitType(BenefitType.builder().code("PIP").build())
@@ -2112,7 +2267,7 @@ public class PersonalisationTest {
 
     @ParameterizedTest
     @CsvSource({"GRANTED", "REFUSED"})
-    public void givenConfidentialRequestForJointParty_thenSetConfidentialFields(RequestOutcome requestOutcome) {
+    void givenConfidentialRequestForJointParty_thenSetConfidentialFields(RequestOutcome requestOutcome) {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID)
             .appeal(Appeal.builder().benefitType(BenefitType.builder().code("PIP").build())
@@ -2135,7 +2290,7 @@ public class PersonalisationTest {
 
     @ParameterizedTest
     @CsvSource({"yes, 0300 790 6234", "no, 0300 123 1142"})
-    public void setHelplineTelephoneNumber_relevantToTheCaseCountry(String isScottish, String helpLineTelephone) {
+    void setHelplineTelephoneNumber_relevantToTheCaseCountry(String isScottish, String helpLineTelephone) {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID)
             .appeal(Appeal.builder().benefitType(BenefitType.builder().code("PIP").build())
@@ -2151,7 +2306,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void shouldPopulateCorrectlyWithEntityAndParty() {
+    void shouldPopulateCorrectlyWithEntityAndParty() {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID)
             .appeal(Appeal.builder().benefitType(BenefitType.builder().code("PIP").build())
@@ -2181,7 +2336,7 @@ public class PersonalisationTest {
 
 
     @Test
-    public void shouldProvideCorrectValuesForPtaGrantedValues() {
+    void shouldProvideCorrectValuesForPtaGrantedValues() {
         String date1 = LocalDate.now().toString();
         String date2 = LocalDate.now().minusDays(10).toString();
         SscsDocumentDetails document1 = SscsDocumentDetails.builder()
@@ -2224,7 +2379,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void shouldProvideCorrectValuesForPtaRefusedValues() {
+    void shouldProvideCorrectValuesForPtaRefusedValues() {
         String date = LocalDate.now().toString();
         SscsDocumentDetails document1 = SscsDocumentDetails.builder()
             .documentType(DocumentType.FINAL_DECISION_NOTICE.getValue())
@@ -2255,7 +2410,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void givenASyaAppealWithHearingArrangements_setHearingArrangementsForTemplate() {
+    void givenASyaAppealWithHearingArrangements_setHearingArrangementsForTemplate() {
         List<String> arrangementList = new ArrayList<>();
 
         arrangementList.add("signLanguageInterpreter");
@@ -2289,7 +2444,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void givenASyaAppealWithHearingArrangements_setHearingArrangementsForTemplate_Welsh() {
+    void givenASyaAppealWithHearingArrangements_setHearingArrangementsForTemplate_Welsh() {
 
         List<String> arrangementList = new ArrayList<>();
 
@@ -2335,7 +2490,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void testSetAsideGrantedDwpState() {
+    void testSetAsideGrantedDwpState() {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID).caseReference(null)
             .dwpState(DwpState.SET_ASIDE_GRANTED)
@@ -2352,7 +2507,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void shouldProvideCorrectValuesForBundleCreatedForUT() {
+    void shouldProvideCorrectValuesForBundleCreatedForUT() {
         String date = LocalDate.now().toString();
         SscsDocumentDetails document1 = SscsDocumentDetails.builder()
             .documentType(DocumentType.FINAL_DECISION_NOTICE.getValue())
@@ -2383,7 +2538,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void givenReviewAndSetAside_setCorrectPtaDecisionDate() {
+    void givenReviewAndSetAside_setCorrectPtaDecisionDate() {
         String date = LocalDate.now().toString();
         String date2 = LocalDate.now().minusDays(20).toString();
         SscsDocumentDetails document1 = SscsDocumentDetails.builder()
@@ -2428,7 +2583,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void givenReviewAndSetAside_setCorrectPtaDecisionDateAndNoReviewAndSetAsideDocument_shouldNotHaveDecisionDate() {
+    void givenReviewAndSetAside_setCorrectPtaDecisionDateAndNoReviewAndSetAsideDocument_shouldNotHaveDecisionDate() {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID)
             .appeal(Appeal.builder().benefitType(BenefitType.builder().code("PIP").build())
@@ -2455,7 +2610,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void whenDwpStateIsLtaGranted_setIsGrantedToTrue() {
+    void whenDwpStateIsLtaGranted_setIsGrantedToTrue() {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID).caseReference("SC/1234/5")
             .regionalProcessingCenter(rpc)
@@ -2474,7 +2629,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void whenDwpStateIsLtaRefused_setIsGrantedToFalse() {
+    void whenDwpStateIsLtaRefused_setIsGrantedToFalse() {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID).caseReference("SC/1234/5")
             .regionalProcessingCenter(rpc)
@@ -2493,7 +2648,7 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void whenDwpStateIsCorrectionIssued_setIsGrantedToTrue() {
+    void whenDwpStateIsCorrectionIssued_setIsGrantedToTrue() {
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID).caseReference("SC/1234/5")
             .regionalProcessingCenter(rpc)
@@ -2512,8 +2667,8 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void whenPostHearingsIsTrueAndFinalDecisionIsSet_setFinalDecision() {
-        ReflectionTestUtils.setField(personalisation, "isPostHearingsEnabled", true);
+    void whenPostHearingsIsTrueAndFinalDecisionIsSet_setFinalDecision() {
+        setField(personalisation, "isPostHearingsEnabled", true);
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID).caseReference("SC/1234/5")
             .regionalProcessingCenter(rpc)
@@ -2534,8 +2689,8 @@ public class PersonalisationTest {
     }
 
     @Test
-    public void whenPostHearingsIsTrueAndFinalDecisionIsNotSet_dontSetFinalDecision() {
-        ReflectionTestUtils.setField(personalisation, "isPostHearingsEnabled", true);
+    void whenPostHearingsIsTrueAndFinalDecisionIsNotSet_dontSetFinalDecision() {
+        setField(personalisation, "isPostHearingsEnabled", true);
         SscsCaseData response = SscsCaseData.builder()
             .ccdCaseId(CASE_ID).caseReference("SC/1234/5")
             .regionalProcessingCenter(rpc)
@@ -2552,6 +2707,244 @@ public class PersonalisationTest {
 
         assertTrue((boolean) result.get(IS_GRANTED));
         assertNull(result.get(FINAL_DECISION_DATE));
+    }
+
+    @ParameterizedTest(name = "{0} - {1} other parties -> OTHER_PARTY_SIZE = {2}")
+    @MethodSource("childSupportOrUcOtherPartySizeScenarios")
+    void givenChildSupportOrUcBenefitAndFeatureEnabled_thenSetsOtherPartySize(String benefitType,
+                                                                          final List<CcdValue<OtherParty>> otherParties,
+                                                                          final int expectedSize) {
+        setField(personalisation, "cmOtherPartyConfidentialityEnabled", true);
+        final SscsCaseData response = SscsCaseData
+            .builder()
+            .ccdCaseId(CASE_ID)
+            .appeal(Appeal
+                .builder()
+                .benefitType(BenefitType.builder().code(benefitType).build())
+                .appellant(Appellant.builder().name(name).build())
+                .build())
+            .otherParties(otherParties)
+            .build();
+
+        final Map<String, Object> result = personalisation.create(NotificationSscsCaseDataWrapper
+                .builder()
+                .newSscsCaseData(response)
+                .notificationEventType(OTHER_PARTY_ADDED_TO_APPEAL)
+                .build(),
+            new SubscriptionWithType(subscriptions.getAppellantSubscription(), APPELLANT, response.getAppeal().getAppellant(),
+                response.getAppeal().getAppellant()));
+
+        assertThat(result).containsEntry(OTHER_PARTY_SIZE, expectedSize);
+    }
+
+    private static Stream<Arguments> childSupportOrUcOtherPartySizeScenarios() {
+        return Stream.of(
+            Arguments.of("childSupport", null, 0),
+            Arguments.of("childSupport", List.of(), 0),
+            Arguments.of("childSupport", buildOtherParties("Alice Jones"), 1),
+            Arguments.of("childSupport", buildOtherParties("Alice Jones", "Bob Smith"), 2),
+            Arguments.of("childSupport", buildOtherParties("Alice Jones", "Bob Smith", "Carol White"), 3),
+            Arguments.of("UC", null, 0),
+            Arguments.of("UC", List.of(), 0),
+            Arguments.of("UC", buildOtherParties("Alice Jones"), 1),
+            Arguments.of("UC", buildOtherParties("Alice Jones", "Bob Smith"), 2),
+            Arguments.of("UC", buildOtherParties("Alice Jones", "Bob Smith", "Carol White"), 3)
+        );
+    }
+
+    @ParameterizedTest(name = "{0} - {1}")
+    @MethodSource("childSupportOrUcWithPreviousOtherPartiesScenarios")
+    void givenChildSupportOrUcBenefitAndPreviousOtherParties_thenFiltersNewPartiesCorrectly(
+        final String scenario,
+        final String benefitCode,
+        final List<CcdValue<OtherParty>> previousOtherParties,
+        final List<CcdValue<OtherParty>> newOtherParties,
+        final int expectedSize,
+        final String expectedNames) {
+        setField(personalisation, "cmOtherPartyConfidentialityEnabled", true);
+        final SscsCaseData newData = SscsCaseData
+            .builder()
+            .ccdCaseId(CASE_ID)
+            .appeal(Appeal
+                .builder()
+                .benefitType(BenefitType.builder().code(benefitCode).build())
+                .appellant(Appellant.builder().name(name).build())
+                .build())
+            .otherParties(newOtherParties)
+            .build();
+        final SscsCaseData previousData = SscsCaseData
+            .builder()
+            .otherParties(previousOtherParties)
+            .build();
+
+        final Map<String, Object> result = personalisation.create(NotificationSscsCaseDataWrapper
+                .builder()
+                .newSscsCaseData(newData)
+                .oldSscsCaseData(previousData)
+                .notificationEventType(OTHER_PARTY_ADDED_TO_APPEAL)
+                .build(),
+            new SubscriptionWithType(subscriptions.getAppellantSubscription(), APPELLANT, newData.getAppeal().getAppellant(),
+                newData.getAppeal().getAppellant()));
+
+        assertThat(result).containsEntry(OTHER_PARTY_SIZE, expectedSize)
+            .containsEntry(OTHER_PARTY_NAMES, expectedNames);
+    }
+
+    private static Stream<Arguments> childSupportOrUcWithPreviousOtherPartiesScenarios() {
+        return Stream.of(
+            Arguments.of(
+                "empty previous returns all current parties",
+                "childSupport",
+                List.of(),
+                buildOtherParties("Alice Jones", "Bob Smith"),
+                2, "Alice Jones and Bob Smith"),
+            Arguments.of(
+                "empty previous returns all current parties",
+                "UC",
+                List.of(),
+                buildOtherParties("Alice Jones", "Bob Smith", "Carol White"),
+                3, "Alice Jones, Bob Smith and Carol White"),
+            Arguments.of(
+                "one existing party filtered out by ID, one new party kept",
+                "childSupport",
+                buildOtherParties("Alice Jones"),
+                buildOtherParties("Alice Jones", "Bob Smith"),
+                1, "Bob Smith"),
+            Arguments.of(
+                "two existing parties filtered out by ID, one new party kept",
+                "UC",
+                buildOtherParties("Alice Jones", "Bob Smith"),
+                buildOtherParties("Alice Jones", "Bob Smith", "Carol White"),
+                1, "Carol White"),
+            Arguments.of(
+                "all current parties are new, none in previous",
+                "childSupport",
+                buildOtherParties("Carol White"),
+                buildOtherParties("Alice Jones", "Bob Smith"),
+                2, "Alice Jones and Bob Smith"),
+            Arguments.of(
+                "all current parties existed in previous, result is empty",
+                "UC",
+                buildOtherParties("Alice Jones", "Bob Smith"),
+                buildOtherParties("Alice Jones", "Bob Smith"),
+                0, ""),
+            Arguments.of(
+                "empty new parties with non-empty previous returns empty result",
+                "childSupport",
+                buildOtherParties("Alice Jones"),
+                List.of(),
+                0, "")
+        );
+    }
+
+    private static List<CcdValue<OtherParty>> buildOtherParties(final String... fullNames) {
+        return Arrays.stream(fullNames).map(PersonalisationTest::buildOtherParty).toList();
+    }
+
+    private static CcdValue<OtherParty> buildOtherParty(final String fullName) {
+        final String[] parts = fullName.split(" ", 2);
+        final Name name = Name.builder().firstName(parts[0]).lastName(parts[1]).build();
+        return new CcdValue<>(OtherParty.builder().id(fullName).name(name).build());
+    }
+
+    private String getExpectedTemplateName(NotificationEventType notificationEventType, SubscriptionType subscriptionType) {
+        final String id = notificationEventType == OTHER_PARTY_ADDED_TO_APPEAL
+            ? "otherPartyAddedToAppeal"
+            : notificationEventType.getId();
+        return id + (subscriptionType == null ? "" : "." + lowerCase(subscriptionType.name()));
+    }
+
+    @ParameterizedTest(name = "{0}")
+    @MethodSource("addOtherPartyDataScenarios")
+    void givenAddOtherPartyDataScenarios_thenSetsOtherPartyNameCorrectly(String scenario, String benefitCode, State state,
+        List<CcdValue<OtherParty>> otherParties, boolean shouldContainOtherPartyName, String expectedOtherPartyName) {
+
+        final SscsCaseData response = SscsCaseData
+            .builder()
+            .ccdCaseId(CASE_ID)
+            .appeal(Appeal
+                .builder()
+                .benefitType(BenefitType.builder().code(benefitCode).build())
+                .appellant(Appellant.builder().name(name).build())
+                .build())
+            .otherParties(otherParties)
+            .build();
+
+        final Map<String, Object> result = personalisation.create(NotificationSscsCaseDataWrapper
+                .builder()
+                .newSscsCaseData(response)
+                .notificationEventType(ADD_OTHER_PARTY_DATA)
+                .state(state)
+                .build(),
+            new SubscriptionWithType(subscriptions.getAppellantSubscription(), APPELLANT, response.getAppeal().getAppellant(),
+                response.getAppeal().getAppellant()));
+
+        if (shouldContainOtherPartyName) {
+            assertThat(result).containsEntry(OTHER_PARTY_NAME, expectedOtherPartyName);
+        } else {
+            assertThat(result).doesNotContainKey(OTHER_PARTY_NAME);
+        }
+    }
+
+    private static Map<String, String> getWelshMap() {
+        Map<String, String> welshMap = new HashMap<>();
+        welshMap.put(PersonalisationKey.LANGUAGE_INTERPRETER.name(), "Dehonglydd iaith arwyddion: ");
+        welshMap.put(PersonalisationKey.SIGN_INTERPRETER.name(), "Dehonglydd iaith arwyddion: ");
+        welshMap.put(PersonalisationKey.HEARING_LOOP.name(), "Dolen glyw: ");
+        welshMap.put(PersonalisationKey.DISABLED_ACCESS.name(), "Mynediad i bobl anab: ");
+        welshMap.put(PersonalisationKey.OTHER_ARRANGEMENTS.name(), "Unrhyw drefniadau eraill: ");
+        welshMap.put(PersonalisationKey.REQUIRED.name(), "Gofynnol");
+        welshMap.put(PersonalisationKey.NOT_REQUIRED.name(), "Dim yn ofynnol");
+        return welshMap;
+    }
+
+    private static Map<String, String> getEnglishMap() {
+        Map<String, String> englishMap = new HashMap<>();
+        englishMap.put(PersonalisationKey.LANGUAGE_INTERPRETER.name(), "Language interpreter: ");
+        englishMap.put(PersonalisationKey.SIGN_INTERPRETER.name(), "Sign interpreter: ");
+        englishMap.put(PersonalisationKey.HEARING_LOOP.name(), "Hearing loop: ");
+        englishMap.put(PersonalisationKey.DISABLED_ACCESS.name(), "Disabled access: ");
+        englishMap.put(PersonalisationKey.OTHER_ARRANGEMENTS.name(), "Any other arrangements: ");
+        englishMap.put(PersonalisationKey.REQUIRED.name(), "Required");
+        englishMap.put(PersonalisationKey.NOT_REQUIRED.name(), "Not required");
+        return englishMap;
+    }
+
+    private static Stream<Arguments> appealResponseDate() {
+        return Stream.of(Arguments.of(
+                Appeal.builder().benefitType(BenefitType.builder().code(Benefit.CHILD_SUPPORT.getShortName()).build()).build(),
+                MAX_DWP_RESPONSE_DAYS_CHILD_SUPPORT), Arguments.of(null, MAX_DWP_RESPONSE_DAYS),
+            Arguments.of(Appeal.builder().build(), MAX_DWP_RESPONSE_DAYS),
+            Arguments.of(Appeal.builder().benefitType(BenefitType.builder().build()).build(), MAX_DWP_RESPONSE_DAYS),
+            Arguments.of(Appeal.builder().benefitType(BenefitType.builder().code(Benefit.ESA.getShortName()).build()).build(),
+                MAX_DWP_RESPONSE_DAYS));
+    }
+
+    @SuppressWarnings({"Indentation", "unused"})
+    private static Object[] generateHearingNotificationTypeAndSubscriptionsScenarios() {
+        return new Object[]{new Object[]{HEARING_BOOKED, APPELLANT}, new Object[]{HEARING_BOOKED, APPOINTEE},
+
+            new Object[]{HEARING_REMINDER, APPELLANT}, new Object[]{HEARING_REMINDER, APPOINTEE},};
+    }
+
+    private static Stream<Arguments> addOtherPartyDataScenarios() {
+        return Stream.of(Arguments.of("UC benefit with single other party in AWAIT_CONFIDENTIALITY_REQUIREMENTS state",
+                Benefit.UC.getShortName(), State.AWAIT_CONFIDENTIALITY_REQUIREMENTS, List.of(
+                    new CcdValue<>(OtherParty.builder().name(Name.builder().firstName("John").lastName("Smith").build()).build())),
+                true, "John Smith"),
+            Arguments.of("UC benefit with multiple other parties in AWAIT_CONFIDENTIALITY_REQUIREMENTS state",
+                Benefit.UC.getShortName(), State.AWAIT_CONFIDENTIALITY_REQUIREMENTS, List.of(new CcdValue<>(
+                        OtherParty.builder().name(Name.builder().firstName("First").lastName("Party").build()).build()),
+                    new CcdValue<>(
+                        OtherParty.builder().name(Name.builder().firstName("Second").lastName("Party").build()).build())), true,
+                "First Party"),
+            Arguments.of("PIP benefit with other party in AWAIT_CONFIDENTIALITY_REQUIREMENTS state", Benefit.PIP.name(),
+                State.AWAIT_CONFIDENTIALITY_REQUIREMENTS, List.of(new CcdValue<>(
+                    OtherParty.builder().name(Name.builder().firstName("John").lastName("Smith").build()).build())), false, null),
+            Arguments.of("UC benefit with other party in WITH_DWP state", Benefit.UC.getShortName(), State.WITH_DWP, List.of(
+                    new CcdValue<>(OtherParty.builder().name(Name.builder().firstName("John").lastName("Smith").build()).build())),
+                false, null), Arguments.of("UC benefit with null other parties in AWAIT_CONFIDENTIALITY_REQUIREMENTS state",
+                Benefit.UC.getShortName(), State.AWAIT_CONFIDENTIALITY_REQUIREMENTS, null, false, null));
     }
 
     private Hearing createHearing(LocalDate hearingDate) {
